RESOLVED FIXED151022
ASSERTION FAILED: !flow->layer() && !flow->isInlineElementContinuation() in WebCore::RenderBlock::addContinuationWithOutline
https://bugs.webkit.org/show_bug.cgi?id=151022
Summary ASSERTION FAILED: !flow->layer() && !flow->isInlineElementContinuation() in W...
Renata Hodovan
Reported 2015-11-09 07:26:31 PST
Created attachment 265049 [details] Test Load the attached test with debug MiniBrowser: <style> * { outline: 92mm solid green; -webkit-columns: 88pt auto; will-change: opacity; } </style> <ins> <h1></h1> </ins> OS: Ubuntu 15.04 x86_64 Checked build: debug EFL Checked version: 009fb33 Backtrace: ASSERTION FAILED: !flow->layer() && !flow->isInlineElementContinuation() ../../Source/WebCore/rendering/RenderBlock.cpp(1668) : void WebCore::RenderBlock::addContinuationWithOutline(WebCore::RenderInline*) 1 0x7fcc6b920f97 WTFCrash 2 0x7fcc72214947 WebCore::RenderBlock::addContinuationWithOutline(WebCore::RenderInline*) 3 0x7fcc72214636 WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 4 0x7fcc72213487 WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 5 0x7fcc72213bab WebCore::RenderBlock::paintChild(WebCore::RenderBox&, WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool, WebCore::RenderBlock::PaintBlockType) 6 0x7fcc7221377d WebCore::RenderBlock::paintChildren(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool) 7 0x7fcc7221370a WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 8 0x7fcc722143b9 WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 9 0x7fcc72213487 WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 10 0x7fcc7233aae1 WebCore::RenderLayer::paintForegroundForFragmentsWithPhase(WebCore::PaintPhase, WTF::Vector<WebCore::LayerFragment, 1ul, WTF::CrashOnOverflow, 16ul> const&, WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int, WebCore::RenderObject*) 11 0x7fcc7233a82a WebCore::RenderLayer::paintForegroundForFragments(WTF::Vector<WebCore::LayerFragment, 1ul, WTF::CrashOnOverflow, 16ul> const&, WebCore::GraphicsContext&, WebCore::GraphicsContext&, WebCore::LayoutRect const&, bool, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int, WebCore::RenderObject*, bool) 12 0x7fcc723388f3 WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 13 0x7fcc723370d1 WebCore::RenderLayer::paintLayerContentsAndReflection(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 14 0x7fcc72336fae WebCore::RenderLayer::paintLayer(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 15 0x7fcc72339167 WebCore::RenderLayer::paintList(WTF::Vector<WebCore::RenderLayer*, 0ul, WTF::CrashOnOverflow, 16ul>*, WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 16 0x7fcc72338985 WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 17 0x7fcc723370d1 WebCore::RenderLayer::paintLayerContentsAndReflection(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 18 0x7fcc72336fae WebCore::RenderLayer::paintLayer(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 19 0x7fcc72339167 WebCore::RenderLayer::paintList(WTF::Vector<WebCore::RenderLayer*, 0ul, WTF::CrashOnOverflow, 16ul>*, WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 20 0x7fcc72338985 WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 21 0x7fcc723370d1 WebCore::RenderLayer::paintLayerContentsAndReflection(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 22 0x7fcc72336fae WebCore::RenderLayer::paintLayer(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 23 0x7fcc72339167 WebCore::RenderLayer::paintList(WTF::Vector<WebCore::RenderLayer*, 0ul, WTF::CrashOnOverflow, 16ul>*, WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 24 0x7fcc72338985 WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 25 0x7fcc723370d1 WebCore::RenderLayer::paintLayerContentsAndReflection(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 26 0x7fcc72336fae WebCore::RenderLayer::paintLayer(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 27 0x7fcc72339167 WebCore::RenderLayer::paintList(WTF::Vector<WebCore::RenderLayer*, 0ul, WTF::CrashOnOverflow, 16ul>*, WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 28 0x7fcc72338985 WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 29 0x7fcc7235f1f6 WebCore::RenderLayerBacking::paintIntoLayer(WebCore::GraphicsLayer const*, WebCore::GraphicsContext&, WebCore::IntRect const&, unsigned int, unsigned int) 30 0x7fcc7235f560 WebCore::RenderLayerBacking::paintContents(WebCore::GraphicsLayer const*, WebCore::GraphicsContext&, unsigned int, WebCore::FloatRect const&) 31 0x7fcc7214b832 WebCore::GraphicsLayer::paintGraphicsLayerContents(WebCore::GraphicsContext&, WebCore::FloatRect const&) Aborted (core dumped) Program terminated with signal SIGSEGV, Segmentation fault. #0 0x00007fcc6b920f9c in WTFCrash () at ../../Source/WTF/wtf/Assertions.cpp:321 321 *(int *)(uintptr_t)0xbbadbeef = 0; #0 0x00007fcc6b920f9c in WTFCrash () at ../../Source/WTF/wtf/Assertions.cpp:321 #1 0x00007fcc72214947 in WebCore::RenderBlock::addContinuationWithOutline (this=0x7fcc52ea7238, flow=0x7fcc52fe3618) at ../../Source/WebCore/rendering/RenderBlock.cpp:1668 #2 0x00007fcc72214636 in WebCore::RenderBlock::paintObject (this=0x7fcc52fb7450, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1625 #3 0x00007fcc72213487 in WebCore::RenderBlock::paint (this=0x7fcc52fb7450, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1420 #4 0x00007fcc72213bab in WebCore::RenderBlock::paintChild (this=0x7fcc52ea7238, child=..., paintInfo=..., paintOffset=..., paintInfoForChild=..., usePrintRect=false, paintType=WebCore::RenderBlock::PaintAsBlock) at ../../Source/WebCore/rendering/RenderBlock.cpp:1494 #5 0x00007fcc7221377d in WebCore::RenderBlock::paintChildren (this=0x7fcc52ea7238, paintInfo=..., paintOffset=..., paintInfoForChild=..., usePrintRect=false) at ../../Source/WebCore/rendering/RenderBlock.cpp:1461 #6 0x00007fcc7221370a in WebCore::RenderBlock::paintContents (this=0x7fcc52ea7238, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1454 #7 0x00007fcc722143b9 in WebCore::RenderBlock::paintObject (this=0x7fcc52ea7238, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1590 #8 0x00007fcc72213487 in WebCore::RenderBlock::paint (this=0x7fcc52ea7238, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1420 #9 0x00007fcc7233aae1 in WebCore::RenderLayer::paintForegroundForFragmentsWithPhase (this=0x7fcc52ea36c0, phase=WebCore::PaintPhaseChildOutlines, layerFragments=..., context=..., localPaintingInfo=..., paintBehavior=0, subtreePaintRootForRenderer=0x0) at ../../Source/WebCore/rendering/RenderLayer.cpp:4738 #10 0x00007fcc7233a82a in WebCore::RenderLayer::paintForegroundForFragments (this=0x7fcc52ea36c0, layerFragments=..., context=..., transparencyLayerContext=..., transparencyPaintDirtyRect=..., haveTransparency=false, localPaintingInfo=..., paintBehavior=0, subtreePaintRootForRenderer=0x0, selectionOnly=false) at ../../Source/WebCore/rendering/RenderLayer.cpp:4716 #11 0x00007fcc723388f3 in WebCore::RenderLayer::paintLayerContents (this=0x7fcc52ea36c0, originalContext=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4331 #12 0x00007fcc723370d1 in WebCore::RenderLayer::paintLayerContentsAndReflection (this=0x7fcc52ea36c0, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:3987 #13 0x00007fcc72336fae in WebCore::RenderLayer::paintLayer (this=0x7fcc52ea36c0, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:3969 #14 0x00007fcc72339167 in WebCore::RenderLayer::paintList (this=0x7fcc52efe900, list=0x7fcc52ffbea0, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4436 #15 0x00007fcc72338985 in WebCore::RenderLayer::paintLayerContents (this=0x7fcc52efe900, originalContext=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4339 #16 0x00007fcc723370d1 in WebCore::RenderLayer::paintLayerContentsAndReflection (this=0x7fcc52efe900, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:3987 #17 0x00007fcc72336fae in WebCore::RenderLayer::paintLayer (this=0x7fcc52efe900, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:3969 #18 0x00007fcc72339167 in WebCore::RenderLayer::paintList (this=0x7fcc52ea35a0, list=0x7fcc52ffbe90, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4436 #19 0x00007fcc72338985 in WebCore::RenderLayer::paintLayerContents (this=0x7fcc52ea35a0, originalContext=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4339 #20 0x00007fcc723370d1 in WebCore::RenderLayer::paintLayerContentsAndReflection (this=0x7fcc52ea35a0, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:3987 #21 0x00007fcc72336fae in WebCore::RenderLayer::paintLayer (this=0x7fcc52ea35a0, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:3969 #22 0x00007fcc72339167 in WebCore::RenderLayer::paintList (this=0x7fcc52efe7e0, list=0x7fcc52ffbe80, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4436 #23 0x00007fcc72338985 in WebCore::RenderLayer::paintLayerContents (this=0x7fcc52efe7e0, originalContext=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4339 #24 0x00007fcc723370d1 in WebCore::RenderLayer::paintLayerContentsAndReflection (this=0x7fcc52efe7e0, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:3987 #25 0x00007fcc72336fae in WebCore::RenderLayer::paintLayer (this=0x7fcc52efe7e0, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:3969 #26 0x00007fcc72339167 in WebCore::RenderLayer::paintList (this=0x7fcc52efe5a0, list=0x7fcc52ffbe70, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4436 #27 0x00007fcc72338985 in WebCore::RenderLayer::paintLayerContents (this=0x7fcc52efe5a0, originalContext=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4339 #28 0x00007fcc7235f1f6 in WebCore::RenderLayerBacking::paintIntoLayer (this=0x7fcc52fd9498, graphicsLayer=0x7fcc52c2e840, context=..., paintDirtyRect=..., paintBehavior=0, paintingPhase=3) at ../../Source/WebCore/rendering/RenderLayerBacking.cpp:2303 #29 0x00007fcc7235f560 in WebCore::RenderLayerBacking::paintContents (this=0x7fcc52fd9498, graphicsLayer=0x7fcc52c2e840, context=..., paintingPhase=3, clip=...) at ../../Source/WebCore/rendering/RenderLayerBacking.cpp:2341 #30 0x00007fcc7214b832 in WebCore::GraphicsLayer::paintGraphicsLayerContents (this=0x7fcc52c2e840, context=..., clip=...) at ../../Source/WebCore/platform/graphics/GraphicsLayer.cpp:413 #31 0x00007fcc726b4767 in WebCore::CoordinatedGraphicsLayer::tiledBackingStorePaint (this=0x7fcc52c2e840, context=..., rect=...) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:876 #32 0x00007fcc730894fe in WebCore::Tile::paintToSurfaceContext (this=0x1a8ad00, context=...) at ../../Source/WebCore/platform/graphics/texmap/coordinated/Tile.cpp:100 #33 0x00007fcc726bf4eb in WebCore::UpdateAtlasSurfaceClient::paintToSurfaceContext (this=0x7ffc62e52110, context=...) at ../../Source/WebCore/platform/graphics/texmap/coordinated/UpdateAtlas.cpp:50 #34 0x00007fcc7171ef67 in WebKit::WebCoordinatedSurface::paintToSurface (this=0x7fcc52fa7410, rect=..., client=0x7ffc62e52110) at ../../Source/WebKit2/Shared/CoordinatedGraphics/WebCoordinatedSurface.cpp:190 #35 0x00007fcc726bf229 in WebCore::UpdateAtlas::paintOnAvailableBuffer (this=0x1a88dc0, size=..., atlasID=@0x7ffc62e52270: 1, offset=..., client=0x1a8ad00) at ../../Source/WebCore/platform/graphics/texmap/coordinated/UpdateAtlas.cpp:110 #36 0x00007fcc726a8faf in WebCore::CompositingCoordinator::paintToSurface (this=0x7fcc52ee0000, size=..., flags=0, atlasID=@0x7ffc62e52270: 1, offset=..., client=0x1a8ad00) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CompositingCoordinator.cpp:383 #37 0x00007fcc726b4c48 in WebCore::CoordinatedGraphicsLayer::paintToSurface (this=0x7fcc52c2e840, size=..., atlas=@0x7ffc62e52270: 1, offset=..., client=0x1a8ad00) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:926 #38 0x00007fcc730892a6 in WebCore::Tile::updateBackBuffer (this=0x1a8ad00) at ../../Source/WebCore/platform/graphics/texmap/coordinated/Tile.cpp:75 #39 0x00007fcc726b9dd7 in WebCore::TiledBackingStore::updateTileBuffers (this=0x7fcc52fa3d10) at ../../Source/WebCore/platform/graphics/texmap/coordinated/TiledBackingStore.cpp:100 #40 0x00007fcc726ba712 in WebCore::TiledBackingStore::createTiles (this=0x7fcc52fa3d10, visibleRect=..., scaledContentsRect=...) at ../../Source/WebCore/platform/graphics/texmap/coordinated/TiledBackingStore.cpp:234 #41 0x00007fcc726b9ac9 in WebCore::TiledBackingStore::createTilesIfNeeded (this=0x7fcc52fa3d10, unscaledVisibleRect=..., contentsRect=...) at ../../Source/WebCore/platform/graphics/texmap/coordinated/TiledBackingStore.cpp:64 #42 0x00007fcc726b518a in WebCore::CoordinatedGraphicsLayer::updateContentBuffers (this=0x7fcc52c2e840) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:995 #43 0x00007fcc726b4fa8 in WebCore::CoordinatedGraphicsLayer::updateContentBuffersIncludingSubLayers (this=0x7fcc52c2e840) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:967 #44 0x00007fcc726b4ff9 in WebCore::CoordinatedGraphicsLayer::updateContentBuffersIncludingSubLayers (this=0x7fcc52c2e000) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:970 #45 0x00007fcc726b4ff9 in WebCore::CoordinatedGraphicsLayer::updateContentBuffersIncludingSubLayers (this=0x7fcc52c1d140) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:970 #46 0x00007fcc726a77fb in WebCore::CompositingCoordinator::flushPendingLayerChanges (this=0x7fcc52ee0000) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CompositingCoordinator.cpp:99 #47 0x00007fcc717d6bc4 in WebKit::CoordinatedLayerTreeHost::performScheduledLayerFlush (this=0x7fcc52fe2210) at ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:212 #48 0x00007fcc717d6c7c in WebKit::CoordinatedLayerTreeHost::layerFlushTimerFired (this=0x7fcc52fe2210) at ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:227 #49 0x00007fcc717d84c5 in std::_Mem_fn<void (WebKit::CoordinatedLayerTreeHost::*)()>::operator()<, void>(WebKit::CoordinatedLayerTreeHost*) const (this=0x19dd4e0, __object=0x7fcc52fe2210) at /usr/include/c++/4.9/functional:569 #50 0x00007fcc717d8377 in std::_Bind<std::_Mem_fn<void (WebKit::CoordinatedLayerTreeHost::*)()> (WebKit::CoordinatedLayerTreeHost*)>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) (this=0x19dd4e0, __args=<unknown type in webkit/WebKitBuild/Debug/lib/libewebkit2.so.1, CU 0x1050706f, DIE 0x10678ff8>) at /usr/include/c++/4.9/functional:1264 #51 0x00007fcc717d81ef in std::_Bind<std::_Mem_fn<void (WebKit::CoordinatedLayerTreeHost::*)()> (WebKit::CoordinatedLayerTreeHost*)>::operator()<, void>() (this=0x19dd4e0) at /usr/include/c++/4.9/functional:1323 #52 0x00007fcc717d7f48 in std::_Function_handler<void (), std::_Bind<std::_Mem_fn<void (WebKit::CoordinatedLayerTreeHost::*)()> (WebKit::CoordinatedLayerTreeHost*)> >::_M_invoke(std::_Any_data const&) (__functor=...) at /usr/include/c++/4.9/functional:2039 #53 0x00007fcc71236a82 in std::function<void ()>::operator()() const (this=0x7fcc52fe2280) at /usr/include/c++/4.9/functional:2439 #54 0x00007fcc712e329a in WebCore::Timer::fired (this=0x7fcc52fe2248) at ../../Source/WebCore/platform/Timer.h:133 #55 0x00007fcc720dbc39 in WebCore::ThreadTimers::sharedTimerFiredInternal (this=0x7fcc52fd6258) at ../../Source/WebCore/platform/ThreadTimers.cpp:121 #56 0x00007fcc720db827 in WebCore::ThreadTimers::<lambda()>::operator()(void) const (__closure=0x19dc920) at ../../Source/WebCore/platform/ThreadTimers.cpp:73 #57 0x00007fcc720dbe4a in std::_Function_handler<void(), WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::<lambda()> >::_M_invoke(const std::_Any_data &) (__functor=...) at /usr/include/c++/4.9/functional:2039 #58 0x00007fcc71236a82 in std::function<void ()>::operator()() const (this=0x7fcc76faa9e8 <WebCore::MainThreadSharedTimer::singleton()::instance+8>) at /usr/include/c++/4.9/functional:2439 #59 0x00007fcc72e6e675 in WebCore::MainThreadSharedTimer::fired (this=0x7fcc76faa9e0 <WebCore::MainThreadSharedTimer::singleton()::instance>) at ../../Source/WebCore/platform/MainThreadSharedTimer.cpp:52 #60 0x00007fcc7307c1bc in WebCore::timerEvent () at ../../Source/WebCore/platform/efl/MainThreadSharedTimerEfl.cpp:44 #61 0x00007fcc692e2d1e in _ecore_call_task_cb (data=<optimized out>, func=<optimized out>) at lib/ecore/ecore_private.h:336 #62 _ecore_timer_expired_call (when=815544.491821395) at lib/ecore/ecore_timer.c:733 #63 0x00007fcc692e2e6b in _ecore_timer_expired_timers_call (when=815544.491821395) at lib/ecore/ecore_timer.c:686 #64 0x00007fcc692deb41 in _ecore_main_loop_iterate_internal (once_only=once_only@entry=0) at lib/ecore/ecore_main.c:1812 #65 0x00007fcc692defc7 in ecore_main_loop_begin () at lib/ecore/ecore_main.c:983 #66 0x00007fcc6b97be8d in WTF::RunLoop::run () at ../../Source/WTF/wtf/efl/RunLoopEfl.cpp:49 #67 0x00007fcc717dbe1b in WebKit::ChildProcessMain<WebKit::WebProcess, WebKit::WebProcessMain> (argc=2, argv=0x7ffc62e52b98) at ../../Source/WebKit2/Shared/unix/ChildProcessMain.h:61 #68 0x00007fcc717dba29 in WebKit::WebProcessMainUnix (argc=2, argv=0x7ffc62e52b98) at ../../Source/WebKit2/WebProcess/efl/WebProcessMainEfl.cpp:161 #69 0x00000000004008ea in main (argc=2, argv=0x7ffc62e52b98) at ../../Source/WebKit2/WebProcess/EntryPoint/unix/WebProcessMain.cpp:44
Attachments
Test (135 bytes, text/html)
2015-11-09 07:26 PST, Renata Hodovan
no flags
Patch (8.21 KB, patch)
2016-08-31 15:23 PDT, alan
no flags
Patch (10.44 KB, patch)
2016-08-31 20:05 PDT, alan
no flags
Brent Fulgham
Comment 1 2016-08-04 17:31:29 PDT
This reproduces under r204037.
Radar WebKit Bug Importer
Comment 2 2016-08-04 17:32:17 PDT
alan
Comment 3 2016-08-31 15:23:47 PDT
Simon Fraser (smfr)
Comment 4 2016-08-31 16:55:28 PDT
Comment on attachment 287550 [details] Patch r+ but I would like to see tests that reveal the behavior change in RenderLayer::shouldBeNormalFlowOnly(); presumably more things with will-change a no longer normal-flow-only layers.
alan
Comment 5 2016-08-31 20:05:22 PDT
WebKit Commit Bot
Comment 6 2016-08-31 20:36:29 PDT
Comment on attachment 287586 [details] Patch Clearing flags on attachment: 287586 Committed r205277: <http://trac.webkit.org/changeset/205277>
WebKit Commit Bot
Comment 7 2016-08-31 20:36:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.